# syd_cpp

./: .gitignore  Activity_8hxx_source.html  CMakeLists.txt  Dockerfile_syd  Readme.md  annotated.html  classLog-members.html  classLog.html  classMD5-members.html  classMD5.html  classRedirectCinToConsole-members.html  classRedirectCinToConsole.html  classes.html  classext_1_1ClinicDatabase-members.html  classext_1_1ClinicDatabase.html  classext_1_1Patient-members.html  classext_1_1Patient.html  classsyd_1_1A-members.html  classsyd_1_1A.html  classsyd_1_1Activity-members.html  classsyd_1_1Activity.html  classsyd_1_1ActivityTimeIntegratedCommand-members.html  classsyd_1_1ActivityTimeIntegratedCommand.html  classsyd_1_1ClinicDatabase-members.html  classsyd_1_1ClinicDatabase.html  classsyd_1_1CropImageBuilder-members.html  classsyd_1_1CropImageBuilder.html  classsyd_1_1Database-members.html  classsyd_1_1Database.html  classsyd_1_1DatabaseCommand-members.html  classsyd_1_1DatabaseCommand.html  classsyd_1_1DatabaseCreator-members.html  classsyd_1_1DatabaseCreator.html  classsyd_1_1DatabaseCreatorBase-members.html  classsyd_1_1DatabaseCreatorBase.html  classsyd_1_1DatabaseFactory-members.html  classsyd_1_1DatabaseFactory.html  classsyd_1_1DatabaseInformation-members.html  classsyd_1_1DatabaseInformation.html  classsyd_1_1DatabaseManager-members.html  (+321 more)
example/: CMakeLists.txt  extMyDatabase.cxx  extMyDatabase.h  extMyDatabasePlugin.cxx  extPatient.cxx  extPatient.h  extTestTool.cxx  extTestTool.ggo  readme.md
mystudy/: CMakeLists.txt
mystudy/src/: CMakeLists.txt  extPatient.h  extendedDatabase.h  extendedDatabasePlugin.cxx
src/: .gitignore  CMakeLists.txt  Doxyfile  readme.md  syd.cxx  syd.ggo  sydActivity.cxx  sydActivity.ggo  sydActivityCommand.cxx  sydActivityCommand.h  sydActivityCommandBase.cxx  sydActivityCommandBase.h  sydActivityCountCommand.cxx  sydActivityCountCommand.h  sydActivityDoseCommand.cxx  sydActivityDoseCommand.h  sydActivityLambdaCommand.cxx  sydActivityLambdaCommand.h  sydActivityPeakCommand.cxx  sydActivityPeakCommand.h  sydActivityTimeIntegratedCommand.cxx  sydActivityTimeIntegratedCommand.h  sydAddTimePointCommand.cxx  sydAddTimePointCommand.h  sydCheckIntegrity.cxx  sydCheckIntegrity.ggo  sydCheckIntegrityCommand.cxx  sydCheckIntegrityCommand.h  sydClearSeriesCommand.cxx  sydClearSeriesCommand.h  sydCommand.cxx  sydCommand.h  sydCommon.cxx  sydCommon.h  sydCommon.txx  sydCompute.cxx  sydConvertDicomSerie.cxx  sydConvertDicomSerie.ggo  sydCreateDatabase.cxx  sydCreateDatabase.ggo  (+89 more)
src/common_db/: CMakeLists.txt  sydCheck.cxx  sydCheck.ggo  sydCheckResult.h  sydCommandLineDefaultWithoutDB.ggo  sydCommandLineWithComments.ggo  sydCommandLineWithTags.ggo  sydCommentsHelper.cxx  sydCommentsHelper.h  sydCommentsHelper.txx  sydCommonDatabase.cxx  sydCommonDatabase.h  sydCreateDatabase.cxx  sydCreateDatabase.ggo  sydDatabase.cxx  sydDatabase.h  sydDatabase.txx  sydDatabaseCreator.h  sydDatabaseCreator.txx  sydDatabaseDescription.cxx  sydDatabaseDescription.h  sydDatabaseInformation.cxx  sydDatabaseInformation.h  sydDatabaseManager.cxx  sydDatabaseManager.h  sydDatabaseManager.txx  sydDatabaseSchemaName.h  sydDelete.cxx  sydDelete.ggo  sydDump.cxx  sydField.h  sydField.txx  sydFieldBase.cxx  sydFieldBase.h  sydFieldDescription.cxx  sydFieldDescription.h  sydFieldType.cxx  sydFieldType.h  sydFieldType.txx  sydFile.cxx  (+77 more)
src/core/: .gitignore  CMakeLists.txt  easylogging++.h  itkMedianWithMaskImageFilter.h  itkMedianWithMaskImageFilter.hxx  md5.cpp  sydAttenuationCorrectedImage.h  sydAttenuationCorrectedImage.txx  sydAttenuationCorrectedPlanarImage.h  sydAttenuationCorrectedPlanarImage.txx  sydAttenuationCorrectedProjectionImage.h  sydAttenuationCorrectedProjectionImage.txx  sydAttenuationImage.h  sydAttenuationImage.txx  sydChangAttenuationImage.h  sydChangAttenuationImage.txx  sydCommon.cxx  sydCommon.h  sydCommon.txx  sydCommonDatabase.h  sydCommonDatabase.txx  sydCommonGengetopt.h  sydDD.h  sydDatabase.cxx  sydDatabase.h  sydDatabase.txx  sydDatabaseCommand.cxx  sydDatabaseCommand.h  sydDatabaseCommand.txx  sydDatabaseCreator.h  sydDatabaseCreator.txx  sydDatabaseDescription.cxx  sydDatabaseDescription.h  sydDatabaseFactory.cxx  sydDatabaseFactory.h  sydDatabaseFactory.txx  sydDatabaseManager.cxx  sydDatabaseManager.h  sydDatabaseManager.txx  sydDatabasePath.h  (+126 more)
src/db/: Activity.hxx  CMakeLists.txt  Patient.hxx  RawImage.hxx  Readme.md  RoiMaskImage.hxx  RoiType.hxx  Serie.hxx  TimeActivity.hxx  TimePoint.hxx  Timepoint.hxx  sydActivityDatabase.cxx  sydActivityDatabase.h  sydClinicDatabase.cxx  sydClinicDatabase.h  sydStudyDatabase.cxx  sydStudyDatabase.h  sydTimePointsDatabase.h  sydTimepointsDatabase.cxx  sydTimepointsDatabase.h
src/ext/: CMakeLists.txt  extExtendedDatabase.cxx  extExtendedDatabase.h  extExtendedDatabasePlugin.cxx  extPatient.cxx  extPatient.h  extPatient.xml  sydTest.cxx
src/gui/: CMakeLists.txt  syd_gui_auc_by_roi.cxx  syd_gui_auc_by_roi.ggo  syd_gui_images.cxx  syd_gui_images.ggo  syd_test_gui.cxx  syd_test_gui.ggo  sydgui.cxx  sydgui.h  sydguiFitOptionsWidget.cxx  sydguiFitOptionsWidget.h  sydguiImageWidget.cxx  sydguiImageWidget.h  sydguiImagesListWidget.cxx  sydguiImagesListWidget.h  sydguiImagesSelectionWidget.cxx  sydguiImagesSelectionWidget.h  sydguiInjectionListWidget.cxx  (+14 more)
superbuild/: CMakeLists.txt
test/: CMakeLists.txt  env_test3.sh  extPatient.h  extendedDatabase.cxx  extendedDatabase.h  extendedDatabasePlugin.cxx  migrate.sh  readme.md  sydTestHelper.cxx  sydTestHelper.h  syd_test1.cxx  syd_test2.cxx  syd_test3.cxx  syd_test3.ggo  syd_test4.cxx  syd_test4.ggo  syd_test5.cxx  syd_test5.ggo  syd_test6.cxx  syd_test6.ggo  test3_ref.txt  test_create_database.cxx  test_delete.cxx  test_dump.cxx  test_extendedDatabase.cxx  test_extendedDatabase.ggo  test_find.cxx  test_image_builder.cxx  test_insert.cxx  test_insert_dicoms.h  test_insert_injections.h  test_insert_patients.h  test_insert_timepoints.cxx  test_integration.cxx  test_query.cxx  test_sydCreateDatabase.cxx  test_tables.cxx  test_timepoint_builder.cxx  test_update.cxx
(+573 files in other folders)
